[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -185,14 +185,6 @@ DEADLINE: <2021-06-30 Wed 23:00 ++1m> SCHEDULED: <2021-06-30 Wed 09:00 ++1m>
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** DONE [#A] 补齐缺失物品 [5/5]                                  :shopping:
-CLOSED: [2021-06-21 周一 17:33] SCHEDULED: <2021-06-21 Tue 09:39>
-- State "DONE"       from "TODO"       [2021-06-21 周一 17:33]
-- [X] 鼠标防滑贴
-- [X] 硅脂
-- [X] 5v-rgb分线器
-- [X] 键帽
-- [X] 胶带
 ** Archive                                                        :ARCHIVE:
 *** DONE [#A] 装机 [100%]                                           :event:
 CLOSED: [2021-06-20 周日 09:25] SCHEDULED: <2021-06-20 周日 09:10>
@@ -230,6 +222,14 @@ CLOSED: [2021-06-20 周日 09:25] SCHEDULED: <2021-06-20 周日 09:10>
    - [X] 音频跳线
 7. [X] 安装显卡并接线固定
 8. [X] 将拆下的机箱部件安装回去, 完成
+** DONE [#A] 补齐缺失物品 [5/5]                                  :shopping:
+CLOSED: [2021-06-21 周一 17:33] SCHEDULED: <2021-06-21 Tue 09:39>
+- State "DONE"       from "TODO"       [2021-06-21 周一 17:33]
+- [X] 鼠标防滑贴
+- [X] 硅脂
+- [X] 5v-rgb分线器
+- [X] 键帽
+- [X] 胶带
 * Appointment
 ** TODO 手机号码切换                                                :event:
 SCHEDULED: <2021-06-12 周六 09:00>
@@ -299,5 +299,8 @@ CLOSED: [2021-06-18 周五 09:29]
 |             |          |                      | 17560 |  16808 |  752 |      |
 #+Tblfm: $6=$4-$5::@17$4=vsum(+@I..@-1)::@17$5=vsum(+@I..@-1)
 可能还需要线缆收纳, 硅脂, 防静电手环等设备
+** TODO 购买xbox精英二代手柄                                     :shopping:
+<2021-11-01 周一 09:00>
+注意手柄的A键不灵敏, 回弹慢, 连续点击后断触问题
 * Project
 * Someday
