--- a/src/org/note/algo_note.org
+++ b/src/org/note/algo_note.org
@@ -236,7 +236,7 @@ v的前驱路径p
             queue.ENQUEUE(e.end)
     return processed_order
 #+END_SRC
-** 最大公约数                                                         :数学:
+** 最大公约数                                                        :数学:
 *** 情景
 求两个整数的最大公约数，如gcd(18, 12)的最大公约数为6
 *** 解法
@@ -1271,3 +1271,20 @@ $ 1/i * (i/(i+1)) * ... * ((n-1)/n) = 1/n $, 最后可得概率为1/n。
          return result
      #+END_SRC
      
+** 碰撞检测                                                          :其他:
+*** 情景
+给定任意两个物体, 检测他们是否发生了碰撞.
+*** 解法
+**** AABB包围盒法                                                   :数学:
+**** 分离轴算法                                                     :分治:
+*** 伪代码
+**** AABB包围盒法                                                   :数学:
+**** 分离轴算法                                                     :分治:
+** 空间分区算法                                                      :其他:
+*** 情景
+将带有位置信息的对象按照所处位置划分为若干个平衡的集合, 每个集合包含对象的数量相
+近
+*** 解法
+**** 四叉树                                                    :二分:数学:
+*** 伪代码
+**** 四叉树                                                    :二分:数学:
