[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -27,12 +27,39 @@ DEADLINE: <2021-07-12 周一 23:00 +1m> SCHEDULED: <2021-07-12 周一 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-06-27 周日 23:00 ++1w> SCHEDULED: <2021-06-26 周六 18:00 ++1w>
+DEADLINE: <2021-07-04 周日 23:00 ++1w> SCHEDULED: <2021-07-03 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-06-20 周日 09:31]
+:LAST_REPEAT: [2021-06-26 周六 15:58]
 :END:
+- State "DONE"       from "TODO"       [2021-06-26 周六 15:58] \\
+  1. 本周主要的工作为重构战场模型, 主要完成了以下几点:
+     * 完成了对新的战场模型的设计
+       新的战场模型现在是一个容器, 接口转发给其下的4个组件:
+       - 关卡模型组件 :: 对关卡对象的抽象
+       - 规则模型组件 :: 对战场规则对象的抽象
+       - 战场模型组件 :: 对在战场上的单位的抽象
+       - 本地模型组件 :: 对布局信息存储的抽象
+       还有一个不属于战场模型管理的组件, 怪物模型组件, 这个是对怪物数据的抽象.
+       这5个组件提供了不完整的默认实现, 子类通过继承和注册, 可以根据玩法类型动态创
+       建每个玩法需要的组件对象. 通过拼接自己玩法的5个组件可以实现在不影响其他玩法
+       的情况下增加新的玩法, 实现了解耦.
+     * 实现进度 [37%]
+       - [X] 基础组件类和战场模型
+       - [X] 基础关卡组件实现
+       - [X] 不影响当前游戏的新组件适配代码
+       - [ ] 三队战斗组件实现
+       - [ ] 英雄山组件实现
+       - [ ] 竞技场组件实现
+       - [ ] 配置关卡组件实现
+  ------------------------------------------------
+  1. 正式转正, 好耶. 而且没开让人尴尬的转正报告会议(主要是阐述核心价值观有点尬)
+  2. 因为转正, 所以每日日报也不需要在写了, 好耶
+  3. 电脑彻底组装完毕. 桌子底部线缆收纳, 键帽替换, 鼠标贴纸, 主机rgb同步都搞定了
+  4. 完成了游戏编程模式的学习, 下周开始学习《python91个建议》
+  ------------------------------------------------
+  1. 组装的rgb主机有点好看, 成就感满满
 - State "DONE"       from "TODO"       [2021-06-20 周日 09:31] \\
   1. 完成了组队车轮战
      由于在一开始设计的时候已经考虑到组队的情况, 基本的框架已经构造好了, 所以整体来
