[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -249,8 +249,11 @@ CLOSED: [2021-06-20 周日 09:25] SCHEDULED: <2021-06-20 周日 09:10>
    - [X] 音频跳线
 7. [X] 安装显卡并接线固定
 8. [X] 将拆下的机箱部件安装回去, 完成
-** DONE [#A] 补齐缺失物品 [5/5]                                  :shopping:
+*** DONE [#A] 补齐缺失物品 [5/5]                                 :shopping:
 CLOSED: [2021-06-21 周一 17:33] SCHEDULED: <2021-06-21 Tue 09:39>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-06-27 周日 10:12
+:END:
 - State "DONE"       from "TODO"       [2021-06-21 周一 17:33]
 - [X] 鼠标防滑贴
 - [X] 硅脂
@@ -272,6 +275,9 @@ SCHEDULED: <2021-06-12 周六 09:00>
   - [ ] QQ
   - [ ] Steam
 - [ ] 联通手机号停机
+** TODO 购买xbox精英二代手柄                                     :shopping:
+<2021-11-01 周一 09:00>
+注意手柄的A键不灵敏, 回弹慢, 连续点击后断触问题
 ** WAIT 爬火炉山                                                     :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
@@ -326,8 +332,5 @@ CLOSED: [2021-06-18 周五 09:29]
 |             |          |                      | 17560 |  16808 |  752 |      |
 #+Tblfm: $6=$4-$5::@17$4=vsum(+@I..@-1)::@17$5=vsum(+@I..@-1)
 可能还需要线缆收纳, 硅脂, 防静电手环等设备
-** TODO 购买xbox精英二代手柄                                     :shopping:
-<2021-11-01 周一 09:00>
-注意手柄的A键不灵敏, 回弹慢, 连续点击后断触问题
 * Project
 * Someday
